--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -36,5 +36,7 @@ $warning   : #f0ea48;
 // $generic-border-radius: 20px;
 $typography-font-family: 'Poppins', '-apple-system', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
+$body-font-size: 16px;
+
 $toolbar-title-font-size: 15px;
 $toolbar-title-font-weight: 600;
